--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,108 +28,55 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container time-block">
-      <div class="row" id="nineAm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">9:00am</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+    <div class="container">
+      <div class="row">
+        <div class="hour">9:00am</div>
+        <input type="text" class="time-block" id="nine">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="tenAm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">10:00am</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">10:00am</div>
+        <input type="text" class="time-block" id="ten">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="elevenAm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">11:00am</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">11:00am</div>
+        <input type="text" class="time-block" id="eleven">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="twelvePm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">12:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">12:00pm</div>
+        <input type="text" class="time-block" id="twelve">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="onePm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">1:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">1:00pm</div>
+        <input type="text" class="time-block" id="one">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="twoPm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">2:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">2:00pm</div>
+        <input type="text" class="time-block" id="two">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="threePm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">3:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">3:00pm</div>
+        <input type="text" class="time-block" id="three">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="fourPm">
-        <div class="col-lg-2" id= "hour">
-          <div class="timeOfDay">4:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">4:00pm</div>
+        <input type="text" class="time-block" id="four">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
-      <div class="row" id="fivePm">
-        <div class="col-lg-2" id="hour">
-          <div class="timeOfDay">5:00pm</div>
-        </div>
-        <div class="col-lg-8">
-          <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-lg-2 saveBtn">
-          <button>Save</button>
-        </div>
+      <div class="row">
+        <div class="hour">5:00pm</div>
+        <input type="text" class="time-block" id="five">
+        <button class="saveBtn"><i>Save</i></button>
       </div>
+      
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
